<resources>
    <string name="app_name">Penguard</string>
    <string name="join">Join</string>
    <string name="username">Username</string>
    <string name="scanP">Scan for available Penguins</string>
    <string name="joinGroup">Join an already existing group</string>
    <string name="failBTScan">Scan failed, please retry</string>
    <string name="stopBTScan">Scan stopped. Please select a penguin</string>
    <string name="stopBTScanNaming">Scan stopped.</string>
    <string name="noResultBTScan">No bluetooth device found</string>
    <string name="scanningBTScan">Scanning… Please wait</string>
    <string name="permissionDeniedBTScan">Location permissions are needed in order to track your penguin!</string>
    <string name="scan">Scan</string>
    <string name="title_activity_settings">Settings</string>
    <string name="penguard_active">Penguard is active</string>
    <string name="group_join_Text">Please enter the name of a member of the group you want to join</string>
    <string name="guard_without_login">skip</string>
    <string name="login">Login</string>
    <string name="group_join_wait">Attempting to join the group, please wait</string>
    <string name="guard">I\'m a Guardian</string>
    <string name="penguin">I\'m a Penguin</string>
    <string name="Welcome">Welcome to Penguard! \nPlease choose whether you are a Guardian or a Penguin. For further information, please read the Help.</string>
    <string name="login_text">Please login to the server with a unique username. You can also guard alone without loging in. However you cannot join others in guarding if you are not loged in</string>
    <string name="groupUN">Name of a group member: </string>
    <string name="penguinName_text">How do you want to name your penguin?</string>
    <string name="penguinName">Penguin name:</string>
    <string name="penguinNameHint">Name</string>
    <string name="penguinName_Button">Continue</string>
    <string name="peng">Penguin </string>
    <string name="penguinName_suc">Penguin was successfully named</string>
    <string name="penguinName_empty">Please choose a name for your penguin</string>
    <string name="endService">End Service</string>
    <string name="joinSuc">Join successful.</string>
    <string name="joinAcept">Your Join request was accepted. Please wait while the group list is updated.</string>
    <string name="joinFail">Unable to join group</string>
    <string name="alreadyRegistered">You are already registered</string>
    <string name="sendingTo">Sending to </string>
    <string name="unknown">unknown</string>
    <string name="unknownPenguin">unknown penguin</string>
    <string name="howTo">HowTo</string>
    <string name="removePenguin">Remove this penguin</string>
    <string name="mergeRequest">Merge Requests</string>
    <string name="backToOverview">Back to Overview</string>
    <string name="stopService">Stop service</string>
    <string name="addPenguin">Add penguin</string>
    <string name="joinGroupBTN">Join group</string>
    <string name="name">Name</string>
    <string name="groupOverviewBTN">Group overview</string>
    <string name="delete">Kick</string>
    <string name="cancel">Cancel</string>
    <string name="deleteQuestion">Do you want to kick this guardian from the group? </string>
    <string name="removeGuardianSuc">Guardian successfully removed</string>
    <string name="removeGuardianFail">Guardian could not be removed</string>
    <string name="penguinRemoveSucceeded">Penguin removed!</string>
    <string name="penguinRemoveFailed">Penguin could not be removed, please try again</string>
    <string name="penguinAddSucceeded">Penguin added!</string>
    <string name="penguinAddFailed">Penguin could not be added, please try again</string>
    <string name="removeSelf">You cannot remove yourself</string>
    <string name="pengSeenBySelf">is seen by you</string>
    <string name="pengSeenByElse">Seen by someone else</string>
    <string name="pengNotSeen">Not seen by anyone</string>
    <string name="no_penguins">You aren\'t guarding any penguins</string>
    <string name="howToDesc">Penguard is an antitheft app that helps you guard various bluetooth devices. You can do this either alone or with your friends. If you wish to guard together with others you have to log in to the server with a unique username.</string>

    <!-- "seen by..."-strings in penguin overview listing. -->
    <string name="seen_by_no_one_else">Seen by no one else.</string>
    <string name="seen_by_no_one">Not sighted recently!</string>
    <string name="seen_by">Seen by</string>
    <string name="you_dativ">you</string>
    <string name="comma">,</string>
    <string name="nobody">nobody</string>


    <!-- Penguin missing -->
    <string name="notification_penguin_missing_title">Penguin missing!</string>
    <string name="notification_penguin_missing">has gone missing!</string>
    <string name="notification_penguin_missing2">is missing. Grab your fishsticks, we\'re going to war!</string>
    <string name="toast_warning_termination">Warning: Penguard was stopped while a penguin was still missing!</string>


    <!-- Strings related to calibration -->
    <string name="button_calibration_start">Start Calibration</string>
    <string name="button_calibration_end">End Calibration</string>
    <string name="calibration_description">Bring the penguin as close as possible, then press Start. After that, walk away slowly until you reach the desired distance, and press the button again.</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrationToggle">calibrationToggle</string>

    <!-- Strings related to merge requests -->
    <string name="group_merge_request_list_file">merge_request_list_file</string>
    <string name="group_merge_request_list">merge_request_list</string>
    <string name="dialog_title_merge_request">Merge Groups?</string>
    <string name="dialog_text_merge_request">Do you want to merge your group with </string>
    <string name="dialog_ok_merge_request">merge</string>
    <string name="dialog_cancel_merge_request">abort</string>
    <string name="notification_merge_request_title">Somebody wants to join your group</string>
    <string name="notification_merge_request_text">Click here to accept the join request</string>
    <string name="toast_merge_failed_progress">Merge not initiated because another one is in progress</string>
    <string name="toast_merge_failed_abort">Merge failed. Probably some member of a group is unreachable or merging with another group.</string>
    <string name="toast_merge_failed_busy">Merging groups failed. You\'re already busy joining another group!</string>

    <string name="action_add_penguin">Add penguin</string>
    <string name="action_group_overview">Group overview</string>
    <string name="action_penguin_overview">Penguin overview</string>
    <string name="action_join_group">Join group</string>
    <string name="action_stop_service">Stop service</string>
    <string name="action_login">Log in</string>


    <!-- Strings related to Settings -->

    <string name="menu_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="ServerIPURL">Server IP or URL</string>
    <string name="ServerPort">Server Port</string>
    <string name="pref_key_server_address">server_address</string>
    <string name="pref_key_server_port">port</string>
    <string name="pref_key_port">port</string>
    <string name="pref_key_uuid">uuid</string>
    <string name="pref_key_username">username</string>
    <string name="pref_key_penguin_missing_delay">penguin_missing_delay</string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_title_penguin_missing_delay">Delay until alarm is rung</string>

    <string name="pref_default_display_name">username</string>
    <string name="pref_default_server_port">6789</string>
    <string name="pref_default_port">6789</string>
    <string name="pref_default_uuid"></string>
    <string name="pref_default_server">penguard.vsos.ethz.ch</string>
    <string name="pref_default_username" />
    <string name="pref_default_penguin_missing_delay">30</string>

    <string name="please_logout_to_change">Please log out to change server settings.</string>



</resources>
