<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/activity_gcalibration"
    tools:context="verteiltesysteme.penguard.GCalibrationActivity">

    <TextView
        android:text="@string/calibration_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calibrationDescription"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:text="@string/calibrationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:id="@+id/calibrationToggle"
        android:layout_below="@+id/calibrationDescription"
        android:layout_centerHorizontal="true"
        android:textOff="@string/button_calibration_start"
        android:textOn="@string/button_calibration_end"
        android:onClick="onClick" />

</RelativeLayout>