<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_how_to"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="verteiltesysteme.penguard.HowToActivity">

    <TextView
        android:text="@string/howToDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_add_penguin"
            android:id="@+id/imageView2"
            android:layout_row="0"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/action_add_penguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="1"
            android:elevation="1dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_penguin_overview"
            android:id="@+id/imageView3"
            android:layout_row="2"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/action_penguin_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_row="2"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_group_overview"
            android:id="@+id/imageView4"
            android:layout_row="4"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/action_group_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_row="4"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_join_group"
            android:id="@+id/imageView5"
            android:layout_row="6"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/action_join_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView91"
            android:layout_row="6"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_login"
            android:id="@+id/imageView6"
            android:layout_row="8"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/action_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView92"
            android:layout_row="8"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_action_stop_service"
            android:id="@+id/imageView7"
            android:layout_row="10"
            android:layout_column="0"
            android:tint="@color/colorPrimaryDark"/>

        <TextView
            android:text="@string/action_stop_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView93"
            android:layout_row="10"
            android:layout_column="1"
            android:paddingLeft="10dp"
            android:paddingTop="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="1"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="3"
            android:layout_column="1"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="3"
            android:layout_column="0"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="5"
            android:layout_column="1"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="5"
            android:layout_column="0"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="7"
            android:layout_column="1"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="7"
            android:layout_column="0"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="9"
            android:layout_column="1"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_row="9"
            android:layout_column="0"/>

    </GridLayout>
</RelativeLayout>
